--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
                             onclick="location.href='https://github.com/SakhileO'">
                             Github
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href=''">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://sakhileo.github.io/My-Portfolio/'">
                             Live Demo
                         </button>
                     </div>
