--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="details-container">
                         <img src="assets/img/education.png" alt="Education icon" class="icon" />
                         <h3>Education</h3>
-                        <p>Diploma in IT<br />PGCE</p>
+                        <p>Diploma in IT (Software Development)<br />PGCE</p>
                     </div>
                 </div>
                 <div class="text-container">
