--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <li>Collaborated with faculty for seamless AV operations.</li>
                             <!-- <li>Live Event Support.</li> -->
                             <li>
-                                <a href="assets/img/NKOSI S.pdf" target="_blank">
+                                <a href="asset/img/NKOSI S.pdf" target="_blank">
                                     <i>Read more...</i>
                                 </a>
                             </li>
